--- a/ui/package.json
+++ b/ui/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "yarn webpack-dev-server --mode development & (sleep 5 && electron .)"
+    "start": "yarn webpack-dev-server --mode development & (sleep 5 && electron .)",
+    "web": "yarn webpack-dev-server --mode development"
   },
   "author": "",
   "license": "ISC",
