--- a/ui/package.json
+++ b/ui/package.json
@@ -27,6 +27,7 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "file-loader": "^5.1.0",
     "react-hot-loader": "^4.12.19",
     "typeface-roboto": "^0.0.75"
