--- a/ui/package.json
+++ b/ui/package.json
@@ -31,6 +31,7 @@
     "file-loader": "^5.1.0",
     "react-code-input": "^3.9.0",
     "react-hot-loader": "^4.12.19",
+    "react-router-dom": "^5.1.2",
     "typeface-roboto": "^0.0.75"
   }
 }
