--- a/ui/package.json
+++ b/ui/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "file-loader": "^5.1.0",
+    "fuse.js": "^3.4.6",
     "react-code-input": "^3.9.0",
     "react-hot-loader": "^4.12.19",
     "react-router-dom": "^5.1.2",
