--- a/ui/package.json
+++ b/ui/package.json
@@ -13,7 +13,8 @@
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "7.9.0",
     "@babel/preset-react": "^7.8.3",
     "@vue/cli": "^4.2.2",
     "babel-loader": "^8.0.6",
@@ -24,9 +25,11 @@
     "style-loader": "^1.1.3",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "yarn": "^1.22.11"
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "classnames": "^2.2.6",
     "file-loader": "^5.1.0",
     "fuse.js": "^3.4.6",
