--- a/ui/package.json
+++ b/ui/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines" : { 
+    "node" : ">=14.16.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "yarn webpack-dev-server --mode development & (sleep 5 && electron .)",
-    "web": "yarn webpack-dev-server --mode development"
+    "web": "yarn webpack-dev-server --config webpack.dev.js --mode development",
+    "build": "yarn webpack --config webpack.prod.js --mode production"
   },
   "author": "",
   "license": "ISC",
@@ -20,12 +23,14 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
     "electron": "^9.4.0",
+    "html-webpack-plugin": "^5.3.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "style-loader": "^1.1.3",
-    "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
+    "webpack": "^5.20.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.2.1",
+    "webpack-merge": "^5.8.0",
     "yarn": "^1.22.11"
   },
   "dependencies": {
