Add Ingredient Management view, Add deleting Ingredients, stub out recipe management page, Add back hot-loading, add react-refresh, rework data store a bit

--- a/auto_bartender/hardware.config.json
+++ b/auto_bartender/hardware.config.json
@@ -7,7 +7,7 @@
         {
             "name": "Pump 1",
             "ml_per_min": 100,
-            "pin_number": 15
+            "pin_number": 14
         },
         {
             "name"  : "Pump 2",
@@ -17,22 +17,32 @@
         {
             "name"  : "Pump 3",
             "ml_per_min": 100,
-            "pin_number": 15
+            "pin_number": 18
         },
         {
             "name"  : "Pump 4",
             "ml_per_min": 100,
-            "pin_number": 15
+            "pin_number": 23
         },
         {
             "name"  : "Pump 5",
             "ml_per_min": 100,
-            "pin_number": 15
+            "pin_number": 24
         },
         {
             "name"  : "Pump 6",
             "ml_per_min": 100,
-            "pin_number": 15
+            "pin_number": 25
+        },
+        {
+            "name"  : "Pump 7",
+            "ml_per_min": 100,
+            "pin_number": 8
+        },
+        {
+            "name"  : "Pump 8",
+            "ml_per_min": 100,
+            "pin_number": 7
         }
     ]
 }
