--- a/ui/package.json
+++ b/ui/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "engines" : { 
-    "node" : ">=14.16.1"
+  "engines": {
+    "node": ">=14.16.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "web": "yarn webpack-dev-server --config webpack.dev.js --mode development",
+    "web": "yarn webpack serve --hot --config webpack.dev.js --mode development",
     "build": "yarn webpack --config webpack.prod.js --mode production"
   },
   "author": "",
@@ -19,13 +19,15 @@
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "7.9.0",
     "@babel/preset-react": "^7.8.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.1",
     "@vue/cli": "^4.2.2",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
     "electron": "^9.4.0",
     "html-webpack-plugin": "^5.3.2",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-refresh": "^0.10.0",
     "style-loader": "^1.1.3",
     "webpack": "^5.20.0",
     "webpack-cli": "^4.8.0",
