--- a/ui/package.json
+++ b/ui/package.json
@@ -42,6 +42,7 @@
     "fuse.js": "^3.4.6",
     "react-code-input": "^3.9.0",
     "react-hot-loader": "^4.12.19",
+    "react-indiana-drag-scroll": "^2.0.1",
     "react-router-dom": "^5.1.2",
     "react-select": "^5.1.0",
     "typeface-roboto": "^0.0.75"
