--- a/ui/.babelrc
+++ b/ui/.babelrc
@@ -1,4 +1,7 @@
 {
   "presets": ["@babel/env", "@babel/preset-react"],
-  "plugins": ["@babel/plugin-transform-runtime"]
+  "plugins": [
+    "@babel/plugin-transform-runtime",
+    ["@babel/plugin-proposal-class-properties", { "loose": false }]
+  ]
 }
