--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "7.9.0",
     "@babel/preset-react": "^7.8.3",
@@ -40,11 +41,14 @@
     "classnames": "^2.2.6",
     "file-loader": "^5.1.0",
     "fuse.js": "^3.4.6",
+    "mobx": "^6.3.3",
+    "mobx-react": "^7.2.0",
     "react-code-input": "^3.9.0",
     "react-hot-loader": "^4.12.19",
     "react-indiana-drag-scroll": "^2.0.1",
     "react-router-dom": "^5.1.2",
     "react-select": "^5.1.0",
+    "react-simple-keyboard": "^3.2.100",
     "typeface-roboto": "^0.0.75"
   }
 }
